
dnl Process this file with autoconf to produce a configure script.
AC_INIT(rlpr.c)
AC_CONFIG_HEADER(config.h)
AC_PREFIX_PROGRAM(rlpr)
VERSION=1.43

AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(VERSION)

PACKAGE=rlpr
AC_SUBST(PACKAGE)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CPP
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(bsd, bzero)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(syslog.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SIGNAL
AC_C_CONST
AC_C_INLINE
RLPR_MAXHOSTNAMELEN_BROKEN
RLPR_OFF_T_LONG_LONG
RLPR_SETRESUID
dnl Checks for library functions.
dnl
dnl TODO: implement select, socket, vprintf
dnl
AC_FUNC_VPRINTF   
AC_CHECK_FUNCS(select socket strcspn strdup strstr seteuid setreuid)

AC_OUTPUT(Makefile, echo timestamp > stamp-h)
